[package]
name = "psyne"
version = "1.3.0"
edition = "2021"
authors = ["Psyne Contributors"]
description = "Rust bindings for Psyne zero-copy messaging library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshmorgan1000/psyne"
keywords = ["messaging", "zero-copy", "ipc", "rpc", "ml"]
categories = ["api-bindings", "network-programming", "science"]

[dependencies]
libc = "0.2"
thiserror = "1.0"
bytes = "1.5"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
criterion = "0.5"

[[bench]]
name = "channel_benchmark"
harness = false

[lib]
name = "psyne"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = []
compression = []
encryption = []
arrow = []
grpc = []